--- a/Share Beauty App/Views/WasoGraphEfficacyView.xib
+++ b/Share Beauty App/Views/WasoGraphEfficacyView.xib
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,6 +15,9 @@
                 <outlet property="mImgVCenter" destination="9mT-zO-IIm" id="llf-Np-0h7"/>
                 <outlet property="mImgVLeft" destination="zhK-vs-zaT" id="R7W-fj-h0Y"/>
                 <outlet property="mImgVRight" destination="y2I-rn-6KA" id="IxJ-jx-o3d"/>
+                <outlet property="mLblVCenter" destination="2FO-mF-0jC" id="SBM-O6-COh"/>
+                <outlet property="mLblVLeft" destination="guP-jo-NKE" id="15X-Jy-dPE"/>
+                <outlet property="mLblVRight" destination="IHE-lM-aWU" id="m9V-Bb-FKB"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -47,10 +50,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BKM-av-bNd">
-                    <rect key="frame" x="44" y="458" width="711" height="41"/>
+                    <rect key="frame" x="270" y="488" width="468" height="41"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="guP-jo-NKE">
-                            <rect key="frame" x="0.0" y="0.0" width="151" height="41"/>
+                            <rect key="frame" x="0.0" y="0.0" width="136" height="41"/>
                             <string key="text">said it has a 
 moisturising effect</string>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
@@ -58,7 +61,7 @@ moisturising effect</string>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2FO-mF-0jC">
-                            <rect key="frame" x="271" y="0.0" width="134" height="41"/>
+                            <rect key="frame" x="166" y="0.0" width="136" height="41"/>
                             <string key="text">said it makes
 skin look healthy</string>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
@@ -66,7 +69,7 @@ skin look healthy</string>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IHE-lM-aWU">
-                            <rect key="frame" x="505" y="0.0" width="206" height="41"/>
+                            <rect key="frame" x="332" y="0.0" width="136" height="41"/>
                             <string key="text">answered they wanted to
 continue using this cream</string>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
@@ -79,12 +82,15 @@ continue using this cream</string>
                         <constraint firstItem="IHE-lM-aWU" firstAttribute="top" secondItem="BKM-av-bNd" secondAttribute="top" id="62h-9n-jmX"/>
                         <constraint firstItem="guP-jo-NKE" firstAttribute="top" secondItem="BKM-av-bNd" secondAttribute="top" id="AC0-Id-E9y"/>
                         <constraint firstAttribute="trailing" secondItem="IHE-lM-aWU" secondAttribute="trailing" id="CDX-Nx-QVj"/>
+                        <constraint firstItem="2FO-mF-0jC" firstAttribute="width" secondItem="guP-jo-NKE" secondAttribute="width" id="FLh-RD-Ovz"/>
                         <constraint firstItem="guP-jo-NKE" firstAttribute="leading" secondItem="BKM-av-bNd" secondAttribute="leading" id="IkT-vG-b49"/>
                         <constraint firstItem="2FO-mF-0jC" firstAttribute="top" secondItem="BKM-av-bNd" secondAttribute="top" id="Jfz-nr-Vvu"/>
-                        <constraint firstItem="IHE-lM-aWU" firstAttribute="leading" secondItem="2FO-mF-0jC" secondAttribute="trailing" constant="100" id="f9R-BY-yLS"/>
-                        <constraint firstItem="2FO-mF-0jC" firstAttribute="leading" secondItem="guP-jo-NKE" secondAttribute="trailing" constant="120" id="li8-Vw-hzw"/>
+                        <constraint firstItem="2FO-mF-0jC" firstAttribute="leading" secondItem="guP-jo-NKE" secondAttribute="trailing" constant="30" id="N9M-T7-jPC"/>
+                        <constraint firstItem="IHE-lM-aWU" firstAttribute="width" secondItem="guP-jo-NKE" secondAttribute="width" id="f39-V8-EUa"/>
+                        <constraint firstAttribute="height" constant="41" id="gkq-vX-HFC"/>
                         <constraint firstAttribute="bottom" secondItem="guP-jo-NKE" secondAttribute="bottom" id="mrd-2E-jnR"/>
                         <constraint firstAttribute="bottom" secondItem="IHE-lM-aWU" secondAttribute="bottom" id="mvZ-Ei-EWO"/>
+                        <constraint firstItem="IHE-lM-aWU" firstAttribute="leading" secondItem="2FO-mF-0jC" secondAttribute="trailing" constant="30" id="pNO-On-3jf"/>
                         <constraint firstAttribute="bottom" secondItem="2FO-mF-0jC" secondAttribute="bottom" id="xo5-99-H84"/>
                     </constraints>
                 </view>
@@ -92,19 +98,20 @@ continue using this cream</string>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="9mT-zO-IIm" secondAttribute="trailing" id="5II-Xo-OAw"/>
-                <constraint firstItem="9mT-zO-IIm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="6YG-ld-f7A"/>
                 <constraint firstItem="q2M-AP-w69" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Pn7-9h-GKj"/>
                 <constraint firstAttribute="bottom" secondItem="q2M-AP-w69" secondAttribute="bottom" id="QIx-mI-edw"/>
                 <constraint firstAttribute="trailing" secondItem="q2M-AP-w69" secondAttribute="trailing" id="RFP-OI-AG6"/>
                 <constraint firstAttribute="trailing" secondItem="y2I-rn-6KA" secondAttribute="trailing" id="S4D-k4-7PN"/>
-                <constraint firstAttribute="bottom" secondItem="BKM-av-bNd" secondAttribute="bottom" constant="100" id="cyV-JQ-By3"/>
+                <constraint firstItem="zhK-vs-zaT" firstAttribute="leading" secondItem="y2I-rn-6KA" secondAttribute="leading" id="VP6-Da-t28"/>
+                <constraint firstItem="BKM-av-bNd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="270" id="VTE-ax-nLz"/>
+                <constraint firstAttribute="bottom" secondItem="BKM-av-bNd" secondAttribute="bottom" constant="70" id="cyV-JQ-By3"/>
                 <constraint firstAttribute="trailing" secondItem="zhK-vs-zaT" secondAttribute="trailing" id="i0r-kO-udh"/>
                 <constraint firstItem="9mT-zO-IIm" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="nYf-sz-662"/>
+                <constraint firstItem="9mT-zO-IIm" firstAttribute="leading" secondItem="y2I-rn-6KA" secondAttribute="leading" id="pRW-N3-FYy"/>
                 <constraint firstItem="q2M-AP-w69" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="rEL-Hi-i25"/>
                 <constraint firstItem="y2I-rn-6KA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="sXB-W4-zic"/>
                 <constraint firstItem="zhK-vs-zaT" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="tzn-oT-TFH"/>
-                <constraint firstItem="BKM-av-bNd" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" constant="15" id="u8N-Xw-MJl"/>
-                <constraint firstItem="zhK-vs-zaT" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="yhc-03-lZC"/>
+                <constraint firstAttribute="trailing" secondItem="BKM-av-bNd" secondAttribute="trailing" constant="30" id="vJw-4b-c6f"/>
                 <constraint firstItem="y2I-rn-6KA" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="zne-5x-nzy"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
